# cabal

./: .travis.yml  README.md  appveyor.yml  travis-script.sh
Cabal/: Cabal.cabal
Cabal/Distribution/PackageDescription/: Configuration.hs
Cabal/Distribution/Simple/: Configure.hs  InstallDirs.hs  Utils.hs
Cabal/Distribution/Simple/Test/: LibV09.hs
Cabal/tests/: HackageTests.hs
Cabal/tests/PackageTests/: Tests.hs
Cabal/tests/PackageTests/TestSuiteTests/ExeV10/: Check.hs
Cabal/tests/UnitTests/Distribution/: System.hs  Version.hs
cabal-install/: cabal-install.cabal
cabal-install/Distribution/Client/: CmdFreeze.hs  Config.hs  Dependency.hs  Install.hs  InstallPlan.hs  ProjectConfig.hs  ProjectPlanning.hs  Setup.hs  SetupWrapper.hs  SolverInstallPlan.hs
cabal-install/Distribution/Client/Dependency/: Modular.hs  TopDown.hs  Types.hs
cabal-install/Distribution/Client/Dependency/Modular/: Builder.hs  ConflictSet.hs  Cycles.hs  Dependency.hs  Explore.hs  IndexConversion.hs  Linking.hs  Log.hs  Message.hs  PSQ.hs  Preference.hs  Solver.hs  Tree.hs  Validate.hs  WeightedPSQ.hs
cabal-install/Distribution/Client/ProjectConfig/: Legacy.hs  Types.hs
cabal-install/Distribution/Solver/: Modular.hs
cabal-install/Distribution/Solver/Modular/: Assignment.hs  Builder.hs  ConflictSet.hs  Cycles.hs  Dependency.hs  Explore.hs  Flag.hs  Index.hs  IndexConversion.hs  Linking.hs  Log.hs  Message.hs  PSQ.hs  Preference.hs  Solver.hs  Tree.hs  Validate.hs  WeightedPSQ.hs
cabal-install/Distribution/Solver/Types/: DependencyResolver.hs  Settings.hs
cabal-install/benchmarks/: Benchmarks.hs  cabal.config  flags.cabal
cabal-install/solver-dsl/UnitTests/Distribution/Solver/Modular/: DSL.hs
cabal-install/tests/: IntegrationTests2.hs  UnitTests.hs
cabal-install/tests/IntegrationTests/custom-setup-in-sandbox/should_run/: reinstall_package_with_custom_setup_in_sandbox.sh
cabal-install/tests/IntegrationTests/custom-setup-in-sandbox/should_run/dependency-1/: dependency.cabal
cabal-install/tests/IntegrationTests/custom-setup-in-sandbox/should_run/dependency-2/: dependency.cabal
cabal-install/tests/IntegrationTests/custom-setup-in-sandbox/should_run/package/: package.cabal
cabal-install/tests/IntegrationTests/exec/should_run/: adds_sandbox_bin_directory_to_path.sh  can_run_executables_installed_in_sandbox.sh  configures_cabal_to_use_sandbox.sh  configures_ghc_to_use_sandbox.sh  runs_given_command.sh
cabal-install/tests/IntegrationTests/regression/: t3436.sh
cabal-install/tests/IntegrationTests/regression/t3436/: Setup.hs
cabal-install/tests/IntegrationTests/sandbox-timestamps/: reinstalls-changed-source-2.out  reinstalls-changed-source-2.sh  reinstalls-changed-source.out  reinstalls-changed-source.sh
cabal-install/tests/IntegrationTests/sandbox-timestamps/p/: Main.hs  p.cabal
cabal-install/tests/IntegrationTests/setup-deps/: custom-setup.cabal  install_setup_deps.sh
cabal-install/tests/UnitTests/Distribution/Client/: FileMonitor.hs  GZipUtils.hs  InstallPlan.hs
cabal-install/tests/UnitTests/Distribution/Client/Dependency/Modular/: Solver.hs
cabal-install/tests/UnitTests/Distribution/Solver/Modular/: DSL.hs  QuickCheck.hs  Solver.hs
cabal-testsuite/PackageTests/CustomDep/: cabal.test.hs
cabal-testsuite/PackageTests/CustomPlain/: cabal.test.hs
cabal-testsuite/PackageTests/NewBuild/T3978/: cabal.out
cabal-testsuite/PackageTests/NewBuild/T4375/: cabal.test.hs
cabal-testsuite/PackageTests/NewFreeze/FreezeFile/: new_freeze.out  new_freeze.test.hs
cabal-testsuite/PackageTests/NewFreeze/FreezeFile/repo/exe-dependency-1.0/: exe-dependency.cabal
cabal-testsuite/PackageTests/NewFreeze/FreezeFile/repo/my-library-dep-1.0/: my-library-dep.cabal
cabal-testsuite/PackageTests/NewFreeze/repo/my-build-tool-dep-1.0/: my-build-tool-dep.cabal
cabal-testsuite/PackageTests/NewFreeze/repo/my-build-tool-dep-2.0/: my-build-tool-dep.cabal
cabal-testsuite/Test/Cabal/: Monad.hs  Prelude.hs  Server.hs
cabal-testsuite/main/: cabal-tests.hs
solver-benchmarks/: HackageBenchmark.hs  README.md  solver-benchmarks.cabal
solver-benchmarks/tests/: HackageBenchmarkTest.hs
