name:                package
version:             1
license:             BSD3
build-type:          Custom
cabal-version:       >=1.2

custom-setup
  setup-depends: base, Cabal, dependency == 2

library
  exposed-modules:     A
  build-depends:       base, dependency == 1
  default-language:    Haskell2010
